# djangoninja-playground

./: README.md  pyproject.toml  test.json
apidemo/: asgi.py  settings.py  urls.py  wsgi.py
benchmarks/: async-in-runserver.txt  async-in-uvicorn.txt  sync-in-runserver.txt  sync-in-uvicorn.txt
scripts/: start.py  start_sync.py
